# Alma-Acquisitions-Automation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
batch/: rialto_pipeline_mock_test.bat  rialto_pipeline_production.bat  rialto_pipeline_sandbox.bat  rialto_pipeline_sandbox_single.bat
common/: __init__.py
config/: rialto_pipeline_config.example.json  rialto_workflow_config.example.json
docs/: ACQUISITIONS_DOMAIN_STATUS.md  ACQUISITIONS_MIGRATION_ANALYSIS.md  DEVELOPER_GUIDE.md  INCIDENT_REPORT_DUPLICATE_PAYMENT_POL5994.md  INVOICE_CREATION_TODO.md  POL-5989_TEST_SUMMARY.md  RIALTO_README.md  RIALTO_WORKFLOW_README.md  SANDBOX_TEST_PLAN.md  rialto_project_flow_findings.md
historical_logs/2025-10/: pol_price_update_results_20251030_141108.csv  pol_price_update_results_20251030_142028.csv  pol_price_update_results_20251030_155452.csv  pol_price_update_results_20251030_155547.csv  pol_price_update_results_20251030_155820.csv  pol_price_update_results_20251030_160440.csv  workflow_results_20251028.csv
historical_logs/2025-11/: invoice_test_results_20251102_123006.csv  invoice_test_results_20251102_155039.csv  invoice_test_results_20251102_160252.csv  invoice_test_results_20251102_162708.csv
scripts/: smoke_project.py
tests/: __init__.py  test_imports.py
tests/logging/: test_acquisitions_domain_logging.py  test_acquisitions_logging_readonly.py
workflows/: __init__.py
workflows/invoices/: __init__.py  bulk_processor.py  erp_integration.py
workflows/rialto/: __init__.py  pdf_extractor.py  pipeline.py  workflow.py
(+26 files in other folders)
