[tool.poetry]
name = "alma-acquisitions-automation"
version = "1.0.0"
description = "Automated Alma Acquisitions workflows: Rialto POL processing and invoice management"
authors = ["Hagay Bar-Or <hagaybar@tauex.tau.ac.il>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
almaapitk = { git = "https://github.com/hagaybar/AlmaAPITK.git", tag = "v0.2.2" }
pandas = "^2.0"
openpyxl = "^3.1"
PyPDF2 = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
