[tool.poetry]
name = "alma-acquisitions-automation"
version = "1.0.0"
description = "Automated Alma Acquisitions workflows: Rialto POL processing and invoice management"
authors = ["Hagay Bar-Or <hagaybar@tauex.tau.ac.il>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# AlmaAPITK package from PyPI (https://pypi.org/project/almaapitk/)
almaapitk = ">=0.3.1"
pandas = "^2.0"
openpyxl = "^3.1"
PyPDF2 = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
